--- a/package.json
+++ b/package.json
@@ -1,8 +1,9 @@
 {
   "name": "@manga-js/manga-js-core",
-  "version": "1.3.7",
+  "version": "1.3.8",
   "description": "Core of Manga JS Server",
   "main": "index.js",
+  "types": "index.d.ts",
   "scripts": {
     "test": "echo \"Error: no test specified\" && exit 1"
   },
