--- a/package.json
+++ b/package.json
@@ -1,9 +1,10 @@
 {
   "name": "@manga-js/manga-js-core",
-  "version": "1.3.9",
+  "version": "1.3.10",
   "description": "Core of Manga JS Server",
-  "main": "index.js",
-  "types": "index.d.ts",
+  "main": "./index.js",
+  "module": "./index.js",
+  "types": "./index.d.ts",
   "scripts": {
     "test": "echo \"Error: no test specified\" && exit 1"
   },
